Commit before creating users. Associations working betweetn professors, students and courses.

--- a/app/views/professors/new.html.erb
+++ b/app/views/professors/new.html.erb
@@ -1,4 +1,5 @@
 <div class="row">
+  <%= render 'shared/errors', obj: @professor %>
   <h2>Create new Professor</h2>
   <div class="col-md-8">
     <%= render 'shared/student-professor-form', obj: @professor %>
