--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,5 +1,6 @@
 <h2> Editing <%= @course.name + " " + @course.level %> </h2>
 <div class="row">
+  <%= render 'shared/errors', obj: @course %>
   <div class="col-md-offset-2"></div>
   <div class="col-md-8">
     <%= render 'courses/form', obj: @course %>
