--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,6 +14,7 @@
         <td><h4><%= course.name %></h4></td>
         <td><h4><%= course.level %></h4></td>
         <td>
+          <%= link_to "View Course", course_path(course), class: "btn btn-success btn-sm" %>
           <%= link_to "Edit Course", edit_course_path(course), class: "btn btn-primary btn-sm" %>
           <%= link_to "Delete Course", course_path(course),method: :delete, data:{confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
         </td>
