--- a/app/views/professors/edit.html.erb
+++ b/app/views/professors/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="row">
+  <%= render 'shared/errors', obj: @professor %>
   <h2>Edit <%= @professor.first_name + " " + @professor.last_name %></h2>
   <div class="col-md-8">
     <%= render 'shared/student-professor-form', obj: @professor %>
