--- a/app/views/shared/_student-professor-form.html.erb
+++ b/app/views/shared/_student-professor-form.html.erb
@@ -11,7 +11,11 @@
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Birthdate</label>
-    <%= f.date_select :birthdate, {order: [:month, :day, :year], prompt: { day: 'Select day', month: 'Select month', year: 'Select year' }, start_year: Date.today.year - 18, end_year: Date.today.year - 100}, {required: true} %>
+    <%= f.date_select :birthdate, {
+        order: [:month, :day, :year],
+        prompt: { day: 'Select day', month: 'Select month', year: 'Select year' },
+        start_year: Date.today.year, end_year: Date.today.year - 60},
+    {required: true} %>
     <%#= datetime_select(obj, :birthdate, start_year: 1980)  %>
   </div>
   <div class="form-group">
