--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <h2>Edit <%= @student.first_name  + " " + @student.last_name %></h2>
+  <%= render 'shared/errors', obj: @student %>
   <div class="col-md-8">
     <%= render 'shared/student-professor-form', obj: @student %>
   </div>
