--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,33 +1,41 @@
 <h2>Students</h2>
+<%= link_to "Create Student", new_student_path, class: "btn btn-success btn-md" %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <!-- PROFILE -->
-    <% @students.each do |student| %>
-    <div class="profile-sidebar well">
-      <!-- SIDEBAR USERPIC -->
-      <div class="profile-userpic">
-        <%= image_tag student.picture.url, alt: student.first_name ,class: "img-responsive" if !student.picture.file.nil? %>
+<div class="row" style="margin-top: 2.5em;">
+    <div class="col-md-10 col-md-offset-1">
+       <div class="row">
+          <!-- PROFILE -->
+          <% @students.each do |student| %>
+            <div class="col-md-6">
+              <div class="profile-sidebar well">
+                <!-- SIDEBAR USERPIC -->
+                <div class="profile-userpic">
+                  <%= image_tag student.picture.url, alt: student.first_name ,class: "img-responsive" if !student.picture.file.nil? %>
+                </div>
+                <!-- END SIDEBAR USERPIC -->
+                <!-- SIDEBAR USER TITLE -->
+                <div class="profile-usertitle">
+                  <div class="profile-usertitle-name">
+                    <%= link_to student.first_name + " " + student.last_name, student_path(student) %>
+                  </div>
+                  <div class="profile-usertitle-job">
+                    <%= student.birthdate.strftime("%Y/%m/%d") if !student.birthdate.nil? %>
+                  </div>
+                </div>
+                <!-- END SIDEBAR USER TITLE -->
+                <!-- SIDEBAR BUTTONS -->
+                <div class="profile-userbuttons">
+                  <%= link_to "Edit Student", edit_student_path(student), class: "btn btn-success btn-sm" %>
+                  <%= link_to "Delete Student", student_path(student), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
+                </div>
+              </div>
+            </div>
+          <% end %>
       </div>
-      <!-- END SIDEBAR USERPIC -->
-      <!-- SIDEBAR USER TITLE -->
-      <div class="profile-usertitle">
-        <div class="profile-usertitle-name">
-          <%= student.first_name + " " + student.last_name %>
-        </div>
-        <div class="profile-usertitle-job">
-          <%= student.birthdate.strftime("%Y/%m/%d") if !student.birthdate.nil? %>
-        </div>
+      <!--END OF PROFILE -->
+      <div class="row" align="center">
+        <%= will_paginate %>
       </div>
-      <!-- END SIDEBAR USER TITLE -->
-      <!-- SIDEBAR BUTTONS -->
-      <div class="profile-userbuttons">
-        <%= link_to "Edit Student", edit_student_path(student), class: "btn btn-success btn-sm" %>
-        <%= link_to "Delete Student", student_path(student), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
-      </div>
-    </div>
-    <% end %>
-    <!--END OF PROFILE -->
   </div>
   <div class="col-md-4"></div>
 </div>
