--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -2,7 +2,7 @@
   <h2>Edit <%= @student.first_name  + " " + @student.last_name %></h2>
   <%= render 'shared/errors', obj: @student %>
   <div class="col-md-8">
-    <%= render 'shared/student-professor-form', obj: @student %>
+    <%= render 'students/form', obj: @student %>
   </div>
   <div class="col-md-offset-4"></div>
 </div>
