--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -29,7 +29,7 @@
         </table>
       </div>
 
-      <% if @student.subjects_to_add.size > 0 %>
+      <% if @student.subjects_to_add.size < 0 %>
       <div class="row">
         <div class="col-md-4">
           <h3>Add more subjects: </h3>
