Added authentication implementation using Devise

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -108,3 +108,11 @@
 .mt-50{
   margin-top: 30px !important;
 }
+
+.jumbotron{
+  background-image:  asset-url('wall.jpg');
+}
+
+.black{
+  color: black !important;
+}
