--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,6 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <% if user_signed_in? %>
         <li><%= link_to "Students", students_path %></li>
         <li><%= link_to "Professors", professors_path %></li>
         <li><%= link_to "Subjects", subjects_path %></li>
@@ -32,15 +33,28 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
+        <% end %>
       </ul>
+
+      <% if 1 == 2 %>
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      <% end %>
+
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li>
+          <% if student_signed_in? %>
+            <%= link_to 'Log out (' + current_student.email + ')', destroy_student_session_path, method: :delete %>
+          <% end %>
+          <% if professor_signed_in? %>
+            <%= link_to 'Log out (' + current_professor.email + ')'  , destroy_professor_session_path, method: :delete %>
+          <% end %>
+        </li>
+        <% if 1 == 2 %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -51,6 +65,7 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
