--- a/app/views/professors/_sidebar.html.erb
+++ b/app/views/professors/_sidebar.html.erb
@@ -17,8 +17,8 @@
     <!-- END SIDEBAR USER TITLE -->
     <!-- SIDEBAR BUTTONS -->
     <div class="profile-userbuttons">
-      <%= link_to "Edit Professor", edit_professor_path(@professor), class: "btn btn-success btn-sm" %>
-      <%= link_to "Delete Professor", professor_path(@professor), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
+      <%= link_to "Edit Professor", edit_professor_registration_path(@professor), class: "btn btn-success btn-sm" %>
+      <%= link_to "Delete Professor", registration_path(@professor), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
     </div>
     <!-- END SIDEBAR BUTTONS -->
     <!-- SIDEBAR MENU -->
@@ -49,3 +49,4 @@
     <!-- END MENU -->
   </div>
 <!-- END OF PROFILE SIDEBAR -->
+
