--- a/app/views/students/_sidebar.html.erb
+++ b/app/views/students/_sidebar.html.erb
@@ -13,14 +13,14 @@
       <%= @student.birthdate.strftime("%Y/%m/%d") if !@student.birthdate.nil? %>
     </div>
     <div class="profile-usertitle-job">
-      <%= @student.course.name + " " + @student.course.level if !@student.course.nil? %>
+      <%#= @student.course.name + " " + @student.course.level if !@student.course.nil? %>
     </div>
   </div>
   <!-- END SIDEBAR USER TITLE -->
   <!-- SIDEBAR BUTTONS -->
   <div class="profile-userbuttons">
-    <%= link_to "Edit Student", edit_student_path(@student), class: "btn btn-success btn-sm" %>
-    <%= link_to "Delete Student", student_path(@student), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
+    <%= link_to "Edit Student", edit_student_registration_path(@student), class: "btn btn-success btn-sm" %>
+    <%= link_to "Delete Student", registration_path(@student), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
   </div>
   <!-- END SIDEBAR BUTTONS -->
   <!-- SIDEBAR MENU -->
