--- a/app/views/professors/new.html.erb
+++ b/app/views/professors/new.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/errors', obj: @professor %>
   <h2>Create new Professor</h2>
   <div class="col-md-8">
-    <%= render 'shared/student-professor-form', obj: @professor %>
+    <%= render 'form', obj: @professor %>
   </div>
   <div class="col-md-offset-2"></div>
 </div>
