--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -6,7 +6,9 @@
     <thead>
     <th>Name</th>
     <th>Level</th>
+    <% if professor_signed_in? or current_user.admin? %>
     <th>Actions</th>
+    <% end %>
     </thead>
     <tbody>
     <% @courses.each do |course| %>
@@ -15,11 +17,14 @@
         <td><h4><%= course.level %></h4></td>
         <td>
           <%= link_to "View Course", course_path(course), class: "btn btn-success btn-sm" %>
+          <% if professor_signed_in? or current_user.admin? %>
           <%= link_to "Edit Course", edit_course_path(course), class: "btn btn-primary btn-sm" %>
           <%= link_to "Delete Course", course_path(course),method: :delete, data:{confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
+          <% end %>
         </td>
       </tr>
     <% end %>
     </tbody>
   </table>
 </div>
+
