--- a/app/views/professors/_form.html.erb
+++ b/app/views/professors/_form.html.erb
@@ -1,4 +1,23 @@
 <%= form_for(obj, :html => {multipart: true, class: "form-horizontal", role: "form"}) do |f|  %>
+
+  <div class="form-group">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Enter your email" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :password %>
+    <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %><br />
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Enter your password" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Repeat your password" %>
+  </div>
+
   <div class="form-group">
     <label for="exampleInputEmail1">Name</label>
     <%= f.text_field :first_name, class: "form-control", placeholder: "Enter your name", autofocus: true  %>
