--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,4 +1,8 @@
 <h2>Professors</h2>
+<% if current_user.admin? %>
+  <%= link_to "Create Professor", new_professor_path, class: "btn btn-md btn-success" %>
+<% end %>
+
 <div class="row" style="margin-top: 2.5em;">
   <div class="col-md-10 col-md-offset-1">
     <div class="row">
@@ -23,8 +27,12 @@
             <!-- END SIDEBAR USER TITLE -->
             <!-- SIDEBAR BUTTONS -->
             <div class="profile-userbuttons">
-              <%= link_to "Edit professor", edit_professor_registration_path(professor), class: "btn btn-success btn-sm" %>
+              <% if current_user == professor or current_user.admin? %>
+              <%= link_to "Edit professor", edit_professor_path(professor), class: "btn btn-success btn-sm" %>
               <%= link_to "Delete professor", registration_path(professor), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger btn-sm" %>
+              <% else %>
+              <%= link_to "View profile", professor_path(professor), class: "btn btn-primary btn-sm" %>
+              <% end %>
             </div>
           </div>
         </div>
